After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685101 - [PATCH] Fix two misspellings in baobab (one in help, one in a source comment)
[PATCH] Fix two misspellings in baobab (one in help, one in a source comment)
Status: RESOLVED FIXED
Product: baobab
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: Baobab Maintainers
Baobab Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-29 16:56 UTC by Martin Olsson
Modified: 2012-09-29 21:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix two misspellings in baobab (one in help, one in source comment) (1.32 KB, patch)
2012-09-29 16:56 UTC, Martin Olsson
reviewed Details | Review
Fix misspelling (855 bytes, patch)
2012-09-29 21:08 UTC, Stefano Facchini
committed Details | Review

Description Martin Olsson 2012-09-29 16:56:12 UTC
Created attachment 225388 [details] [review]
Fix two misspellings in baobab (one in help, one in source comment)

The attached patch fixes two misspellings in baobab (one in help, one in a source comment)
Comment 1 Stefano Facchini 2012-09-29 21:02:27 UTC
Review of attachment 225388 [details] [review]:

Thanks for you report

::: help/C/scan-remote.page
@@ +61,3 @@
         <item>
           <title><link xref="web-dav">Secure WebDAV (HTTPS)</link></title>
+	  <p>Secure WebDAV, ensures encryption while you are transferring

This line belongs to a commented region and will likely disappear in a future version, so I'm not sure it's worth changing it

::: src/baobab-chart.c
@@ +1478,3 @@
  *
  * Returns a #GtkTreePath pointing to the root of the widget. The
+ * programmer has the responsibility to free the used memory once

Good catch :) I'll commit this one.
Comment 2 Stefano Facchini 2012-09-29 21:08:38 UTC
The following fix has been pushed:
6a43526 Fix misspelling
Comment 3 Stefano Facchini 2012-09-29 21:08:40 UTC
Created attachment 225399 [details] [review]
Fix misspelling