Fix misspelling

https://bugzilla.gnome.org/show_bug.cgi?id=685101